# synthetic-edge-generator

./: .claudeignore  .gitignore  API_MAP.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  DATABASE.md  DEVELOPER_GUIDE.md  PROJECT_MAP.md  README.md  main.py  operations.py  pyproject.toml  synthedge_findings.py
corpus/: crashes.json  inputs.json
docs/: launch_checklist.md  reddit_post.md  show_hn.md
edge_case_engine/: _pydantic.py  budget.py  classref.py  codec.py  combinatorial.py  contracts.py  corpus.py  deduplicator.py  discovery.py  engine.py  executor.py  minimizer.py  mutation.py  mutation_engine.py  navigator.py  path_tracker.py  recipe.py  rng.py  scheduler.py
examples/: example_functions.py  findings_report.md  real_world_targets.py
synthedge/: cli.py  exporter.py
tests/: pydantic_fixtures.py  test_architecture_gate.py  test_budget.py  test_classref.py  test_cli.py  test_cli_seed.py  test_codec.py  test_composite_handlers.py  test_contract_filtering.py  test_corpus_v2.py  test_dedup.py  test_engine_generation.py  test_exporter.py  test_generics_handlers.py  test_handler_registry.py  test_mutators.py  test_navigator.py  test_nested_mutation.py  test_path_tracker.py  test_pydantic_support.py  test_recipe.py  test_regenerate_mutator.py  test_resolver.py  test_rng.py  test_scalar_handlers.py  test_user_type_codec.py  test_user_type_handlers.py  user_type_fixtures.py
type_handlers/: base.py  bool_handler.py  dataclass_handler.py  dict_handler.py  enum_handler.py  float_handler.py  integer_handler.py  list_handler.py  literal_handler.py  none_handler.py  (+9 more)
(+17 files in other folders)
